module(
    name = "cpp-concurrency",
    version = "1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "grpc", version = "1.56.3", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "protobuf", version = "23.1")
bazel_dep(name = "abseil-cpp", version = "20220623.1", repo_name = "absl")